starting function/css

--- a/index.html
+++ b/index.html
@@ -32,48 +32,48 @@
           type="button"
           id="button-addon2"
         >
-          Button
+          Search
         </button>
       </div>
     </section>
     <div class="container">
       <div class="row">
-        <div class="col card" id="today">
+        <div class="col-6 col-md-4 col-lg-2 card" id="today">
           <h3>today</h3>
           <p><img /></p>
           <p>Temp:</p>
           <p>Wind:</p>
           <p>Humidity:</p>
         </div>
-        <div class="col card 5-day">
+        <div class="col-6 col-md-4 col-lg-2 card 5-day">
           <h3></h3>
           <p><img /></p>
           <p>Temp:</p>
           <p>Wind:</p>
           <p>Humidity:</p>
         </div>
-        <div class="col card 5-day">
+        <div class="col-6 col-md-4 col-lg-2 card 5-day">
           <h3></h3>
           <p><img /></p>
           <p>Temp:</p>
           <p>Wind:</p>
           <p>Humidity:</p>
         </div>
-        <div class="col card 5-day">
+        <div class="col-6 col-md-4 col-lg-2 card 5-day">
           <h3></h3>
           <p><img /></p>
           <p>Temp:</p>
           <p>Wind:</p>
           <p>Humidity:</p>
         </div>
-        <div class="col card 5-day">
+        <div class="col-6 col-md-4 col-lg-2 card 5-day">
           <h3></h3>
           <p><img /></p>
           <p>Temp:</p>
           <p>Wind:</p>
           <p>Humidity:</p>
         </div>
-        <div class="col card 5-day">
+        <div class="col-6 col-md-4 col-lg-2 card 5-day">
           <h3></h3>
           <p><img /></p>
           <p>Temp:</p>
