populatin cards with for loop

--- a/index.html
+++ b/index.html
@@ -36,49 +36,77 @@
         </button>
       </div>
     </section>
-    <div class="container">
+    <div class="history">
+      <h5>Search History</h5>
+      <ul></ul>
+    </div>
+
+    <div id="forcast" class="container">
       <div class="row">
         <div class="col-6 col-md-4 col-lg-2 card" id="today">
-          <h3>today</h3>
-          <p><img /></p>
-          <p>Temp:</p>
-          <p>Wind:</p>
-          <p>Humidity:</p>
+          <header>
+            <h3>today</h3>
+            <img class="icon-1" src="" alt="" />
+          </header>
+          <p class="temp-1">Temp:</p>
+          <p class="wind-1">Wind:</p>
+          <p class="humid-1">Humidity:</p>
+          <p class="uv-1">UV Index:</p>
         </div>
-        <div class="col-6 col-md-4 col-lg-2 card 5-day">
-          <h3></h3>
-          <p><img /></p>
-          <p>Temp:</p>
-          <p>Wind:</p>
-          <p>Humidity:</p>
+        <div class="day-0 col-6 col-md-4 col-lg-2 card 5-day">
+          <header>
+            <h3>day 0</h3>
+            <img class="icon" src="" alt="" />
+          </header>
+          <p class="temp-h">High:</p>
+          <p class="temp-l">Low:</p>
+          <p class="wind">Wind:</p>
+          <p class="humid">Humidity:</p>
+          <!-- <p class="uv">UV Index:</p> -->
         </div>
-        <div class="col-6 col-md-4 col-lg-2 card 5-day">
-          <h3></h3>
-          <p><img /></p>
-          <p>Temp:</p>
-          <p>Wind:</p>
-          <p>Humidity:</p>
+        <div class="day-1 col-6 col-md-4 col-lg-2 card 5-day">
+          <header>
+            <h3>day 1</h3>
+            <img class="icon" src="" alt="" />
+          </header>
+          <p class="temp-h">High:</p>
+          <p class="temp-l">Low:</p>
+          <p class="wind">Wind:</p>
+          <p class="humid">Humidity:</p>
+          <!-- <p class="uv">UV Index:</p> -->
         </div>
-        <div class="col-6 col-md-4 col-lg-2 card 5-day">
-          <h3></h3>
-          <p><img /></p>
-          <p>Temp:</p>
-          <p>Wind:</p>
-          <p>Humidity:</p>
+        <div class="day-2 col-6 col-md-4 col-lg-2 card 5-day">
+          <header>
+            <h3>day 2</h3>
+            <img class="icon" src="" alt="" />
+          </header>
+          <p class="temp-h">High:</p>
+          <p class="temp-l">Low:</p>
+          <p class="wind">Wind:</p>
+          <p class="humid">Humidity:</p>
+          <!-- <p class="uv">UV Index:</p> -->
         </div>
-        <div class="col-6 col-md-4 col-lg-2 card 5-day">
-          <h3></h3>
-          <p><img /></p>
-          <p>Temp:</p>
-          <p>Wind:</p>
-          <p>Humidity:</p>
+        <div class="day-3 col-6 col-md-4 col-lg-2 card 5-day">
+          <header>
+            <h3>day 3</h3>
+            <img class="icon" src="" alt="" />
+          </header>
+          <p class="temp-h">High:</p>
+          <p class="temp-l">Low:</p>
+          <p class="wind">Wind:</p>
+          <p class="humid">Humidity:</p>
+          <!-- <p class="uv">UV Index:</p> -->
         </div>
-        <div class="col-6 col-md-4 col-lg-2 card 5-day">
-          <h3></h3>
-          <p><img /></p>
-          <p>Temp:</p>
-          <p>Wind:</p>
-          <p>Humidity:</p>
+        <div class="day-4 col-6 col-md-4 col-lg-2 card 5-day">
+          <header>
+            <h3>day 4</h3>
+            <img class="icon" src="" alt="" />
+          </header>
+          <p class="temp-h">High:</p>
+          <p class="temp-l">Low:</p>
+          <p class="wind">Wind:</p>
+          <p class="humid">Humidity:</p>
+          <!-- <p class="uv">UV Index:</p> -->
         </div>
       </div>
     </div>
