everything but local storage

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           id="search-input"
           type="text"
           class="form-control"
-          placeholder="Recipient's username"
+          placeholder="Search for a city..."
           aria-label="Recipient's username"
           aria-describedby="button-addon2"
         />
@@ -51,11 +51,11 @@
           <p class="temp-1">Temp:</p>
           <p class="wind-1">Wind:</p>
           <p class="humid-1">Humidity:</p>
-          <p class="uv-1">UV Index:</p>
+          <p class="uv-1" id="uvi">UV Index:</p>
         </div>
         <div class="day-0 col-6 col-md-4 col-lg-2 card 5-day">
           <header>
-            <h3>day 0</h3>
+            <h3 class="date">Nov, 20th</h3>
             <img class="icon" src="" alt="" />
           </header>
           <p class="temp-h">High:</p>
@@ -66,7 +66,7 @@
         </div>
         <div class="day-1 col-6 col-md-4 col-lg-2 card 5-day">
           <header>
-            <h3>day 1</h3>
+            <h3 class="date">day 1</h3>
             <img class="icon" src="" alt="" />
           </header>
           <p class="temp-h">High:</p>
@@ -77,7 +77,7 @@
         </div>
         <div class="day-2 col-6 col-md-4 col-lg-2 card 5-day">
           <header>
-            <h3>day 2</h3>
+            <h3 class="date">day 2</h3>
             <img class="icon" src="" alt="" />
           </header>
           <p class="temp-h">High:</p>
@@ -88,7 +88,7 @@
         </div>
         <div class="day-3 col-6 col-md-4 col-lg-2 card 5-day">
           <header>
-            <h3>day 3</h3>
+            <h3 class="date">day 3</h3>
             <img class="icon" src="" alt="" />
           </header>
           <p class="temp-h">High:</p>
@@ -99,7 +99,7 @@
         </div>
         <div class="day-4 col-6 col-md-4 col-lg-2 card 5-day">
           <header>
-            <h3>day 4</h3>
+            <h3 class="date">day 4</h3>
             <img class="icon" src="" alt="" />
           </header>
           <p class="temp-h">High:</p>
