minor html changes

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="row">
         <div class="col-6 col-md-4 col-lg-2 card" id="today">
           <header>
-            <h3>today</h3>
+            <h3>Today</h3>
             <img class="icon-1" src="" alt="" />
           </header>
           <p class="temp-1">Temp:</p>
@@ -55,7 +55,7 @@
         </div>
         <div class="day-0 col-6 col-md-4 col-lg-2 card 5-day">
           <header>
-            <h3 class="date">Nov, 20th</h3>
+            <h3 class="date">day 0</h3>
             <img class="icon" src="" alt="" />
           </header>
           <p class="temp-h">High:</p>
