adding city name to display

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
       <h5>Search History</h5>
       <ul></ul>
     </div>
-
+    <div>
+      <h2 id="city">Current and future conditions for your city</h2>
+    </div>
     <div id="forcast" class="container">
       <div class="row">
         <div class="col-6 col-md-4 col-lg-2 card" id="today">
