finished readme and added local storage function

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
     <div class="history">
       <h5>Search History</h5>
-      <ul></ul>
+      <ul id="search-history"></ul>
     </div>
     <div>
       <h2 id="city">Current and future conditions for your city</h2>
