placeholders and clearing search field

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <ul id="search-history"></ul>
     </div>
     <div>
-      <h2 id="city">Current and future conditions for your city</h2>
+      <h2 id="city">Search a city for weather data...</h2>
     </div>
     <div id="forcast" class="container">
       <div class="row">
@@ -57,7 +57,7 @@
         </div>
         <div class="day-0 col-6 col-md-4 col-lg-2 card 5-day">
           <header>
-            <h3 class="date">day 0</h3>
+            <h3 class="date">Forecast</h3>
             <img class="icon" src="" alt="" />
           </header>
           <p class="temp-h">High:</p>
@@ -68,7 +68,7 @@
         </div>
         <div class="day-1 col-6 col-md-4 col-lg-2 card 5-day">
           <header>
-            <h3 class="date">day 1</h3>
+            <h3 class="date">Forecast</h3>
             <img class="icon" src="" alt="" />
           </header>
           <p class="temp-h">High:</p>
@@ -79,7 +79,7 @@
         </div>
         <div class="day-2 col-6 col-md-4 col-lg-2 card 5-day">
           <header>
-            <h3 class="date">day 2</h3>
+            <h3 class="date">Forecast</h3>
             <img class="icon" src="" alt="" />
           </header>
           <p class="temp-h">High:</p>
@@ -90,7 +90,7 @@
         </div>
         <div class="day-3 col-6 col-md-4 col-lg-2 card 5-day">
           <header>
-            <h3 class="date">day 3</h3>
+            <h3 class="date">Forecast</h3>
             <img class="icon" src="" alt="" />
           </header>
           <p class="temp-h">High:</p>
@@ -101,7 +101,7 @@
         </div>
         <div class="day-4 col-6 col-md-4 col-lg-2 card 5-day">
           <header>
-            <h3 class="date">day 4</h3>
+            <h3 class="date">Forecast</h3>
             <img class="icon" src="" alt="" />
           </header>
           <p class="temp-h">High:</p>
